# strongswan-epdg

./: README.md  configure.ac  git-version-gen
conf/plugins/: eap-sim-http.opt
debian/: changelog  control  libcharon-extra-plugins.install  not-installed  rules
osmo-epdg/epdg/etc/swanctl/: swanctl.conf
osmo-epdg/epdg/etc/swanctl/private/: epdgKey.pem
osmo-epdg/epdg/etc/swanctl/x509/: epdgCert.pem
osmo-epdg/ue/swanctl/: swanctl.conf
osmo-epdg/ue/swanctl/x509ca/: strongswanCert.pem
src/libcharon/: Makefile.am
src/libcharon/attributes/: attributes.c  attributes.h
src/libcharon/bus/: bus.c  bus.h
src/libcharon/bus/listeners/: listener.h
src/libcharon/encoding/payloads/: configuration_attribute.c  notify_payload.c  notify_payload.h
src/libcharon/plugins/eap_aka/: eap_aka_server.c
src/libcharon/plugins/eap_sim_http/: Makefile.am  eap_sim_http_card.c  eap_sim_http_card.h  eap_sim_http_client.c  eap_sim_http_plugin.c  eap_sim_http_plugin.h
src/libcharon/plugins/eap_sim_pcsc/: eap_sim_pcsc_card.c
src/libcharon/plugins/eap_simaka_pcsc/: Makefile.am  eap_simaka_pcsc_card.c  eap_simaka_pcsc_card.h  eap_simaka_pcsc_plugin.c  eap_simaka_pcsc_plugin.h
src/libcharon/plugins/osmo_epdg/: Makefile.am  gsup_client.c  gsup_client.h  ipa_client.c  ipa_client.h  osmo_epdg_db.c  osmo_epdg_db.h  osmo_epdg_listener.c  osmo_epdg_listener.h  osmo_epdg_plugin.c  osmo_epdg_plugin.h  osmo_epdg_provider.c  osmo_epdg_provider.h  osmo_epdg_ue.c  osmo_epdg_ue.h  osmo_epdg_utils.c  osmo_epdg_utils.h  pco.h
src/libcharon/sa/ikev2/authenticators/: eap_authenticator.c
src/libcharon/sa/ikev2/tasks/: ike_config.c
src/libsimaka/: simaka_manager.c
src/libstrongswan/collections/: blocking_queue.c  blocking_queue.h
src/libstrongswan/credentials/: auth_cfg.c
src/libstrongswan/crypto/hashers/: hasher.c
src/libstrongswan/plugins/openssl/: openssl_plugin.c
src/libstrongswan/plugins/soup/: soup_fetcher.c
